백엔드 oauth + 웹소켓 + DB 연동 초안